--- a/uni.scss
+++ b/uni.scss
@@ -27,6 +27,9 @@ $uni-text-color-grey:#999;//辅助灰色，如加载更多的提示信息
 $uni-text-color-placeholder: #808080;
 $uni-text-color-disable:#c0c0c0;
 
+$fw-c-primary:#2d8cf0;//蓝天蓝色
+
+
 /* 背景颜色 */
 $uni-bg-color:#ffffff;
 $uni-bg-color-grey:#f8f8f8;
